<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/bgColor"
    android:gravity="center_horizontal"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_your"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        android:background="@color/textBlue"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_minutes"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:backgroundTint="@color/btnColor"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="01/01/2022"
        android:textColor="@color/textBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/selected_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/selected_dates"
        android:textColor="@color/lightGray"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvAgeMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="0"
        android:textColor="@color/textBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/age_in_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/age_in_minutes"
        android:textColor="@color/lightGray"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvAgeHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="0"
        android:textColor="@color/textBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/age_in_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/age_in_hours"
        android:textColor="@color/lightGray"
        android:textSize="20sp"
        android:textStyle="bold"
        />

</LinearLayout>